--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav class="custom-navbar navbar navbar-expand-md navbar-light bg-light" arial-label="Furni navigation bar">
 
 	<div class="container">
-		<a class="navbar-brand" href="index.html"><img class="nav_logo" src="/images/Herbspice_Logo.png"></a>
+		<a class="navbar-brand" href="index.html"><img class="nav_logo" src="images/Herbspice_Logo.png"></a>
 
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
