--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             <!-- Start Column 2 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-                <a class="product-item" href="cart.html">
+                <a class="product-item" href="shop.html">
                     <img src="images/standuppack.png" class="img-fluid product-thumbnail" alt="Black Pepper 100g">
                     <h3 class="product-title">Black Pepper</h3>
                     <strong class="product-price">100g</strong>
@@ -159,7 +159,7 @@
 
             <!-- Start Column 3 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-                <a class="product-item" href="cart.html">
+                <a class="product-item" href="shop.html">
                     <img src="images/pepper.png" class="img-fluid product-thumbnail" alt="Black Pepper 500g">
                     <h3 class="product-title">Black Pepper</h3>
                     <strong class="product-price">500g</strong>
@@ -172,7 +172,7 @@
 
             <!-- Start Column 4 -->
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-                <a class="product-item" href="cart.html">
+                <a class="product-item" href="shop.html">
                     <img src="images/pepper.png" class="img-fluid product-thumbnail" alt="Black Pepper 1kg">
                     <h3 class="product-title">Black Pepper</h3>
                     <strong class="product-price">1Kg</strong>
